--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,6 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -57,6 +56,14 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
           }
         },
@@ -68,7 +75,11 @@
           "configurations": {
             "production": {
               "browserTarget": "la-tour-des-heros:build:production"
-            }
+            },
+            "development": {
+              "browserTarget": "la-tour-des-heros:build:development"
+            },
+            "defaultConfiguration": "development"
           }
         },
         "extract-i18n": {
